---------------------------------------------------------------------------------------------------
Version: 1.18.5
Date: 2023-??-??

  Changes:
    - Increase cost of each unit for attack groups to balance recently change of new units and attacks
    - Custom attack group's MIXED_UNIT_POINTS changed from 20 to 25. 150 units to 120.
    - Custom attack group's FLYING_UNIT_POINTS changed from 50 to 75. 60 units to 40.
    - Custom attack group's DROPSHIP_UNIT_POINTS changed from 100 to 200. 30 units to 15.
    - K2 Creep can be toggle based on startup setting for each race.  They are default to ON.
    - Expansion buildings now spawn decoration if the building support it.

  Modding:
    - Add drop_player_unit() to custom attack helper.

---------------------------------------------------------------------------------------------------
Version: 1.18.4
Date: 2023-07-30

  Changes:
    - Refactored force helper and race setting helper.

  Bugfixes:
    - Fix drop unit in custom attack crash when it's used with projectiles.


---------------------------------------------------------------------------------------------------
Version: 1.18.3
Date: 2023-07-30

  Changes:
    - Add functions for upcoming team color and map color handling.

  Bugfixes:
    - Fixed GUI crash when there are other non ERM enemy_ prefixed forces presents.
    - Fixed a crash when onBiterBaseBuilt happens on a non ERM race.


---------------------------------------------------------------------------------------------------
Version: 1.18.2
Date: 2023-07-29

  Changes:
    - Boss mode no longer have hard limited to erm_zerg and erm_toss.  Other races can extend it.

  Bugfixes:
    - Fix a crash in CustomAttackHelper.drop_batch_units()

---------------------------------------------------------------------------------------------------
Version: 1.18.1
Date: 2023-07-29

  Bugfixes:
    - Turn off debug mode, again!
