@@ -1,14 +1,16 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.18.5
-Date: 2023-??-??
+Date: 2023-08-03
 
   Changes:
     - Increase cost of each unit for attack groups to balance recently change of new units and attacks
     - Custom attack group's MIXED_UNIT_POINTS changed from 20 to 25. 150 units to 120.
     - Custom attack group's FLYING_UNIT_POINTS changed from 50 to 75. 60 units to 40.
     - Custom attack group's DROPSHIP_UNIT_POINTS changed from 100 to 200. 30 units to 15.
+    - enemyracemanager-attack-meter-threshold multipler default reduced from 1.5x to 1.25x
     - K2 Creep can be toggle based on startup setting for each race.  They are default to ON.
     - Expansion buildings now spawn decoration if the building support it.
+    - Cannon shell for enemy damage changed, standard shell deals heavy single target and 2 radius aoe light damage, explosive deal 4 radius aoe with heavy damage
 
   Modding:
     - Add drop_player_unit() to custom attack helper.
